@@ -8,3 +8,12 @@ pipeline = egg:FakeApp#caps normal
 use = egg:FakeApp#caps
 method_to_call = lower
 next = normal
+
+[pipeline:piped2]
+pipeline = egg:FakeApp#caps2 normal
+
+[filter-app:filt2]
+use = egg:FakeApp#caps2
+method_to_call = lower
+next = normal
+
